# LHCb-Detector_Masters_Main

./: README.md
Detector/: .clang-format  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extract_gdml.sh  lhcbproject.yml  toolchain.cmake
Detector/Core/include/Core/: ConditionsLoader.h  ConditionsReader.h  DeAlignmentCall.h  DetectorDataService.h  FloatComparison.h  GeometryTools.h  LineTraj.h  MagneticFieldGrid.h  MagneticFieldGridReader.h  Material.h  ParameterMap.h  ShapeUtilities.h  TaggedBool.h  Units.h  Utils.h  crc.h
Detector/Core/src/: Align_cond.cpp  ConditionIdentifier.cpp  ConditionsFileReader.cpp  ConditionsGitReader.cpp  ConditionsLoader.cpp  ConditionsReader.cpp  ConditionsRepository.cpp  DeAlignmentCall.cpp  DeConditionCall.cpp  DeHandles.cpp  DeIOV.cpp  DetectorDataService.cpp  GdmlImport.cpp  GeometryChecker.cpp  GeometryTools.cpp  Keys.cpp  LHCbCompactTags.cpp  MagneticFieldExtension.cpp  MagneticFieldGrid.cpp  MagneticFieldGridReader.cpp  ParameterMap.cpp  PrintHelpers.cpp  ShapeUtilities.cpp  UpgradeTags.cpp  Utils.cpp  checksumGeo.cpp  nodeInfo.cpp  yaml_converters.cpp
Detector/Core/tests/: CMakeLists.txt
Detector/Core/tests/scripts/: runTest.sh
Detector/Core/tests/src/: AlignmentUseCase.cpp  DumpConditions.cpp  test_CaloVolumeID.cpp  test_ConditionsOverlay.cpp  test_DDS.cpp  test_DDS_SMOG.cpp  test_DDS_interactionregion.cpp  test_DDS_lhcinfo.cpp  test_DDS_limit_IOV.cpp  test_DDS_tell40links.cpp  test_DDS_with_Overlay.cpp  test_DetElements_validity.cpp  test_DetectorDataService.cpp  test_GitCondDB.cpp  test_RichIntersections.cpp  test_Subtraction.cpp  test_alignment_parsing.cpp  test_checkChecksum.cpp  test_conddb_schema_handling.cpp  test_condition_git_reader.cpp  test_deft.cpp  test_deft_geo.cpp  test_delhcb.cpp  test_demuon.cpp  test_detelements.cpp  test_deut_detailed.cpp  test_deut_stave_positions.cpp  test_devp.cpp  test_loadDetector.cpp  test_load_scope.cpp  test_magnet.cpp  test_multipleTGeo.cpp  test_scope.cpp  test_vpvolumeid.cpp
Detector/Detector/BeamPipe/src/: BeamPipe_geo.cpp  Pipe_Section1_volume.cpp  Pipe_VMA_geo.cpp
Detector/Detector/Calo/src/: DeCaloHandles.cpp  DeCalorimeter.cpp
Detector/Detector/Calo/tests/: CMakeLists.txt
Detector/Detector/ECAL/src/: ECAL_cond.cpp  ECAL_geo.cpp
Detector/Detector/FT/scripts/: makeDB.py
Detector/Detector/FT/src/: DeFT.cpp  DeFTConditionCalls.cpp  DeFTHandles.cpp  DeFTMat.cpp  FT_cond.cpp  FT_geo.cpp
Detector/Detector/HCAL/src/: HCAL_cond.cpp  HCAL_geo.cpp
Detector/Detector/Infrastructure/src/: BCM_geo.cpp  BLS_geo.cpp  DetectorRegion.cpp  MBXW_geo.cpp
Detector/Detector/LHCb/src/: DeLHCb.cpp  DeLHCbHandles.cpp  InteractionRegion.cpp  LHCInfo.cpp  LHCb_cond.cpp  SMOGInfo.cpp  Tell40Links.cpp
Detector/Detector/LHCb/tests/: CMakeLists.txt
Detector/Detector/MP/src/: DeMP.cpp  DeMPConditionCalls.cpp  DeMPHandles.cpp  MP_cond.cpp  MP_geo.cpp
Detector/Detector/Magnet/src/: DeMagnet.cpp  DeMagnetHandles.cpp  Magnet_cond.cpp
Detector/Detector/Muon/scripts/: import_muon_readout_cond.py
Detector/Detector/Muon/src/: DAQHelper.cpp  DeMuon.cpp  DeMuonChamber.cpp  DeMuonConditionCalls.cpp  DeMuonGasGap.cpp  DeMuonHandles.cpp  Layout.cpp  MuonChamberGrid.cpp  Muon_cond.cpp  NODEBoard.cpp  ReadoutCond.cpp  ReadoutCondJson.cpp  ReadoutCondYaml.h  TSMap.cpp  Tell40PCIBoard.cpp  TileID.cpp  muon_geo.cpp
Detector/Detector/Muon/tests/: CMakeLists.txt
Detector/Detector/Rich/src/: DeRich.cpp  DeRichMapmt.cpp  DeRichRadiator.cpp
Detector/Detector/Rich1/src/: DeRich1ConditionCalls.cpp  Rich1_cond.cpp  RichGeoTransAux.cpp  RichGeomVersion.cpp
Detector/Detector/Rich2/src/: DeRich2ConditionCalls.cpp  Rich2_cond.cpp
Detector/Detector/TV/src/: DeTV.cpp  DeTVConditionCalls.cpp  DeTVHandles.cpp  DeTVSensor.cpp  TVChannelID.cpp  TVVolumeID.cpp  TV_cond.cpp  TV_geo.cpp  TV_geo_dump.cpp  TV_geo_master.cpp
Detector/Detector/TestScope/: scope_cond.cpp  scope_geo.cpp
Detector/Detector/UP/src/: DeUP.cpp  DeUPConditionCalls.cpp  DeUPFace.cpp  DeUPHandles.cpp  DeUPLayer.cpp  DeUPModule.cpp  DeUPSector.cpp  DeUPSensor.cpp  DeUPSide.cpp  DeUPStave.cpp  UPChannelID.cpp  UP_cond.cpp  UP_geo.cpp
Detector/Detector/UT/src/: ChannelID.cpp  DeUT.cpp  DeUTConditionCalls.cpp  DeUTHandles.cpp  UT_cond.cpp  UT_geo.cpp
Detector/Detector/VP/src/: DeVP.cpp  DeVPConditionCalls.cpp  (+7 more)
Detector/ReleaseNotes/: release_notes_template.md  v1r0.md  v1r1.md  v1r10.md  v1r11.md  v1r12.md  v1r13.md  v1r14.md  v1r15.md  v1r16.md  v1r17.md  v1r18.md  v1r19.md  v1r2.md  v1r20.md  v1r21.md  v1r22.md  v1r23.md  v1r24.md  v1r25.md  v1r26.md  v1r27.md  v1r28.md  v1r29.md  v1r3.md  v1r30.md  v1r31.md  v1r32.md  v1r33.md  v1r34.md  v1r35.md  v1r4.md  v1r5.md  v1r5p1.md  v1r6.md  v1r7.md  v1r8.md  v1r9.md  v2r0.md
Detector/TestUtils/: CMakeLists.txt
Detector/TestUtils/src/: Fixture.cpp
Detector/build.x86_64_v2-el9-gcc12-opt/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Detector.xenv  DetectorConfig.cmake  DetectorPlugins.components  DetectorTargets.cmake  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt  manifest.xml
Detector/build.x86_64_v2-el9-gcc12-opt/TestUtils/: CTestTestfile.cmake  cmake_install.cmake
Detector/build.x86_64_v2-el9-gcc12-opt/lib/: DetectorTestPlugins.components
Detector/build.x86_64_v2-el9-gcc12-opt/toolchain/: g++  gcc  gfortran  wrapper
Detector/cmake/: DetectorConfig.cmake.in
Detector/data/: LHCb_regions.xml  load_LHCb.xml  load_LHCb_orig.xml
Detector/doc/: DETECTOR.md  HOWTO.md
Detector/examples/: FT_ana_ddg4.C  VP_Module.C  VP_ana_ddg4.C  convert.sh  ddg4_FT.py  ddg4_UT.py  ddg4_VP.py  material_properties.py  runtest.sh  runtestRich1.sh  runtestRich2.sh  view.sh
Detector/scripts/: check_dependency.py  check_path_xml.py  create_checksum_file.sh  verify_checksums.py
Detector/scripts/GeometryValidation/: list_volumes.C
Detector/scripts/materials/: check_materials.py
Detector/tests/ConditionsIOV/: .schema.json
Detector/tests/testscope/: .schema.json  scope.xml
(+795 files in other folders)
